fix(first-section): correct hero content alignment

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
     padding: 0px;
     box-sizing: border-box;
     font-family: '';
-    border: 1px solid;
+    /* border: 1px solid;   */
 }
 
 /* first section style and layout */
@@ -66,16 +66,26 @@
     display: flex;
     flex-direction: column;
     padding: 20px;
+    padding-left: 100px;
     align-items: flex-start;
     gap: 10px;
     max-width: 500px;
+    justify-content: center;
 }
 
 .hero-section-right {
+    display: flex;
     flex: 1;
-    justify-content: center;
-    align-items: center;
     padding: 20px;
+    justify-content: center;
+
+}
+
+.hero-section-right img {
+    width: 400px;
+    border-radius: 10px;
+    border-style: none;
 }
 
 /* second section style and layout */
+
